force-app/main/default/objects/NAICS_Code_Mapping__c/NAICS_Code_Mapping__c.object-meta.xml
<CustomObject>
    <description>This  custom object will be used to store various NAICS code values and its corresponding business name to replace an app exchange product and related to Account object.</description>
    <label>NAICS Code Mapping</label>
    <nameField>
        <label>NAICS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NAICS Code Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>