force-app/main/default/objects/NAICS_Code_Mapping__c/fields/NAICS_2_Digit__c.field-meta.xml
<CustomField>
    <fullName>NAICS_2_Digit__c</fullName>
    <label>NAICS 2 Digit #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>